# data-science-base-c

./: .clang-format  CMakeLists.txt  README.md
lib/include/: matrix.h  vector.h
lib/src/: matrix.c  vector.c
tests/vectors/: vector_dot_product.c  vector_insert.c  vector_scalar_multiplication.c
